// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With props={"sizes":[]}, should match snapshot 1`] = `
<section>
  <h2>
    Which size do you like?
  </h2>
  <div
    className="sizes"
  />
</section>
`;

exports[`With props={"sizes":[{"name":"a size"}]}, should match snapshot 1`] = `
<section>
  <h2>
    Which size do you like?
  </h2>
  <div
    className="sizes"
  >
    <a
      className="sizes__size"
      onClick={[Function]}
    >
      a size
    </a>
  </div>
</section>
`;
